[package]
name = "ail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aom = { version = "0.1.0", path = "../aom" }
acure = { version = "0.0.1", features = ["d2d1","x11"], git = "https://github.com/Ichinose0/acure/" }
winit = "0.29.7"